Updated neural network model with plot

--- a/01_neuralnetwrks.ipynb
+++ b/01_neuralnetwrks.ipynb
@@ -265,8 +265,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Epoch 0 and loss is 1.0846847295761108\n",
             "Epoch 10 and loss is 0.9183797240257263\n",
@@ -294,9 +294,33 @@
         "    loss.backward()\n",
         "    optimizer.step()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "dd347082",
+      "metadata": {},
+      "source": [
+        "Now let's plot these valuse to check for gradient descent and then measure how accurate our model is.\n",
+        "This will give a curve that will let us know about this."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "24bfceca",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "plt.plot(range(epochs),losses)# x,y axis set\n",
+        "plt.ylabel('Loss')\n",
+        "plt.xlabel('Epochs')"
+      ]
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "language": "python",
@@ -305,9 +329,6 @@
     "language_info": {
       "name": "python",
       "version": "3.12.10"
-    },
-    "colab": {
-      "provenance": []
     }
   },
   "nbformat": 4,
