Tested and evaluated set

--- a/01_neuralnetwrks.ipynb
+++ b/01_neuralnetwrks.ipynb
@@ -400,50 +400,50 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 16,
       "id": "964f4c14",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "964f4c14",
-        "outputId": "cf1c8fb0-b877-4139-b771-4b07efb489dc"
+        "outputId": "f3292a82-6190-4dd3-d164-a030d37d7340"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1.) tensor([-1.4120,  6.3132,  2.6088]) \t Actual Value: 1 \t Predicted Value: 1\n",
-            "2.) tensor([ 8.4023,  2.4573, -7.5391]) \t Actual Value: 0 \t Predicted Value: 0\n",
-            "3.) tensor([-12.1991,   1.1829,  13.7443]) \t Actual Value: 2 \t Predicted Value: 2\n",
-            "4.) tensor([-1.6752,  5.9271,  2.8622]) \t Actual Value: 1 \t Predicted Value: 1\n",
-            "5.) tensor([-1.5887,  6.7559,  2.8371]) \t Actual Value: 1 \t Predicted Value: 1\n",
-            "6.) tensor([ 7.8451,  2.3289, -7.0010]) \t Actual Value: 0 \t Predicted Value: 0\n",
-            "7.) tensor([ 1.1273,  6.0707, -0.0493]) \t Actual Value: 1 \t Predicted Value: 1\n",
-            "8.) tensor([-5.2088,  4.4484,  6.5316]) \t Actual Value: 2 \t Predicted Value: 2\n",
-            "9.) tensor([-3.2614,  4.9128,  4.4788]) \t Actual Value: 1 \t Predicted Value: 1\n",
-            "10.) tensor([0.5683, 6.5565, 0.5445]) \t Actual Value: 1 \t Predicted Value: 1\n",
-            "11.) tensor([-4.3492,  4.7780,  5.6344]) \t Actual Value: 2 \t Predicted Value: 2\n",
-            "12.) tensor([ 7.3631,  2.0552, -6.5497]) \t Actual Value: 0 \t Predicted Value: 0\n",
-            "13.) tensor([ 8.1384,  2.3552, -7.2879]) \t Actual Value: 0 \t Predicted Value: 0\n",
-            "14.) tensor([ 7.4936,  2.1057, -6.6740]) \t Actual Value: 0 \t Predicted Value: 0\n",
-            "15.) tensor([ 7.8643,  2.2491, -7.0269]) \t Actual Value: 0 \t Predicted Value: 0\n",
-            "16.) tensor([-1.3322,  6.5325,  2.5448]) \t Actual Value: 1 \t Predicted Value: 1\n",
-            "17.) tensor([-8.2712,  2.4244,  9.6406]) \t Actual Value: 2 \t Predicted Value: 2\n",
-            "18.) tensor([0.3374, 6.4826, 0.7657]) \t Actual Value: 1 \t Predicted Value: 1\n",
-            "19.) tensor([-1.5909,  5.7677,  2.7565]) \t Actual Value: 1 \t Predicted Value: 1\n",
-            "20.) tensor([-8.1891,  2.2739,  9.5411]) \t Actual Value: 2 \t Predicted Value: 2\n",
-            "21.) tensor([ 7.2431,  2.0816, -6.4291]) \t Actual Value: 0 \t Predicted Value: 0\n",
-            "22.) tensor([-3.9169,  4.6616,  5.1603]) \t Actual Value: 2 \t Predicted Value: 2\n",
-            "23.) tensor([ 7.3462,  2.2806, -6.5133]) \t Actual Value: 0 \t Predicted Value: 0\n",
-            "24.) tensor([-7.8081,  2.5460,  9.1545]) \t Actual Value: 2 \t Predicted Value: 2\n",
-            "25.) tensor([-5.7146,  5.6767,  7.1671]) \t Actual Value: 2 \t Predicted Value: 2\n",
-            "26.) tensor([-6.1246,  3.7117,  7.4511]) \t Actual Value: 2 \t Predicted Value: 2\n",
-            "27.) tensor([-7.8021,  2.8851,  9.1732]) \t Actual Value: 2 \t Predicted Value: 2\n",
-            "28.) tensor([-8.0843,  2.8461,  9.4759]) \t Actual Value: 2 \t Predicted Value: 2\n",
-            "29.) tensor([ 7.2430,  2.0465, -6.4321]) \t Actual Value: 0 \t Predicted Value: 0\n",
-            "30.) tensor([ 7.1733,  2.1733, -6.3522]) \t Actual Value: 0 \t Predicted Value: 0\n",
+            "1.) tensor([-1.4120,  6.3132,  2.6088]) \t Actual Value: 1 \t Predicted Value: 1!\n",
+            "2.) tensor([ 8.4023,  2.4573, -7.5391]) \t Actual Value: 0 \t Predicted Value: 0!\n",
+            "3.) tensor([-12.1991,   1.1829,  13.7443]) \t Actual Value: 2 \t Predicted Value: 2!\n",
+            "4.) tensor([-1.6752,  5.9271,  2.8622]) \t Actual Value: 1 \t Predicted Value: 1!\n",
+            "5.) tensor([-1.5887,  6.7559,  2.8371]) \t Actual Value: 1 \t Predicted Value: 1!\n",
+            "6.) tensor([ 7.8451,  2.3289, -7.0010]) \t Actual Value: 0 \t Predicted Value: 0!\n",
+            "7.) tensor([ 1.1273,  6.0707, -0.0493]) \t Actual Value: 1 \t Predicted Value: 1!\n",
+            "8.) tensor([-5.2088,  4.4484,  6.5316]) \t Actual Value: 2 \t Predicted Value: 2!\n",
+            "9.) tensor([-3.2614,  4.9128,  4.4788]) \t Actual Value: 1 \t Predicted Value: 1!\n",
+            "10.) tensor([0.5683, 6.5565, 0.5445]) \t Actual Value: 1 \t Predicted Value: 1!\n",
+            "11.) tensor([-4.3492,  4.7780,  5.6344]) \t Actual Value: 2 \t Predicted Value: 2!\n",
+            "12.) tensor([ 7.3631,  2.0552, -6.5497]) \t Actual Value: 0 \t Predicted Value: 0!\n",
+            "13.) tensor([ 8.1384,  2.3552, -7.2879]) \t Actual Value: 0 \t Predicted Value: 0!\n",
+            "14.) tensor([ 7.4936,  2.1057, -6.6740]) \t Actual Value: 0 \t Predicted Value: 0!\n",
+            "15.) tensor([ 7.8643,  2.2491, -7.0269]) \t Actual Value: 0 \t Predicted Value: 0!\n",
+            "16.) tensor([-1.3322,  6.5325,  2.5448]) \t Actual Value: 1 \t Predicted Value: 1!\n",
+            "17.) tensor([-8.2712,  2.4244,  9.6406]) \t Actual Value: 2 \t Predicted Value: 2!\n",
+            "18.) tensor([0.3374, 6.4826, 0.7657]) \t Actual Value: 1 \t Predicted Value: 1!\n",
+            "19.) tensor([-1.5909,  5.7677,  2.7565]) \t Actual Value: 1 \t Predicted Value: 1!\n",
+            "20.) tensor([-8.1891,  2.2739,  9.5411]) \t Actual Value: 2 \t Predicted Value: 2!\n",
+            "21.) tensor([ 7.2431,  2.0816, -6.4291]) \t Actual Value: 0 \t Predicted Value: 0!\n",
+            "22.) tensor([-3.9169,  4.6616,  5.1603]) \t Actual Value: 2 \t Predicted Value: 2!\n",
+            "23.) tensor([ 7.3462,  2.2806, -6.5133]) \t Actual Value: 0 \t Predicted Value: 0!\n",
+            "24.) tensor([-7.8081,  2.5460,  9.1545]) \t Actual Value: 2 \t Predicted Value: 2!\n",
+            "25.) tensor([-5.7146,  5.6767,  7.1671]) \t Actual Value: 2 \t Predicted Value: 2!\n",
+            "26.) tensor([-6.1246,  3.7117,  7.4511]) \t Actual Value: 2 \t Predicted Value: 2!\n",
+            "27.) tensor([-7.8021,  2.8851,  9.1732]) \t Actual Value: 2 \t Predicted Value: 2!\n",
+            "28.) tensor([-8.0843,  2.8461,  9.4759]) \t Actual Value: 2 \t Predicted Value: 2!\n",
+            "29.) tensor([ 7.2430,  2.0465, -6.4321]) \t Actual Value: 0 \t Predicted Value: 0!\n",
+            "30.) tensor([ 7.1733,  2.1733, -6.3522]) \t Actual Value: 0 \t Predicted Value: 0!\n",
             "We got 30 correct out of 30\n"
           ]
         }
