Graphing of losses

--- a/03_cnn.ipynb
+++ b/03_cnn.ipynb
@@ -15,16 +15,16 @@
       "execution_count": 1,
       "id": "5a1c3209",
       "metadata": {
-        "id": "5a1c3209",
-        "outputId": "72fcf905-93d5-46dd-d3c8-f3f14a2f929b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "5a1c3209",
+        "outputId": "72fcf905-93d5-46dd-d3c8-f3f14a2f929b"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "100%|██████████| 9.91M/9.91M [00:00<00:00, 16.2MB/s]\n",
             "100%|██████████| 28.9k/28.9k [00:00<00:00, 500kB/s]\n",
@@ -106,19 +106,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "36727b00",
       "metadata": {
-        "id": "36727b00",
-        "outputId": "46315433-23ce-4913-d636-ad21d5aee2e3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "36727b00",
+        "outputId": "46315433-23ce-4913-d636-ad21d5aee2e3"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "cnn(\n",
             "  (conv1): Conv2d(1, 6, kernel_size=(3, 3), stride=(1, 1))\n",
@@ -131,7 +131,7 @@
         }
       ],
       "source": [
-        "torch.manual_seed(42)\n",
+        "torch.manual_seed(41)\n",
         "model = cnn()\n",
         "print(model)"
       ]
@@ -174,16 +174,16 @@
       "execution_count": 5,
       "id": "696ff0a6",
       "metadata": {
-        "id": "696ff0a6",
-        "outputId": "fe8fa1da-2bd9-4edd-83e9-e351ab717c9b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "696ff0a6",
+        "outputId": "fe8fa1da-2bd9-4edd-83e9-e351ab717c9b"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "epoch: 0 batch: 600 loss: 0.6762621998786926\n",
             "epoch: 1 batch: 600 loss: 0.3470820486545563\n",
@@ -232,9 +232,46 @@
         "total = current_time - start_time\n",
         "print(f'Training took: {total/60} mins')"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "07ce3d8a",
+      "metadata": {},
+      "source": [
+        "Now to graph these results basically graph the losses, before that convert the nmupy arrays to python lists"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "97a4a9bc",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "train_losses = [tl.item() for tl in train_losses]\n",
+        "test_losses = [tl.item() for tl in test_losses]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "83b91607",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "plt.plot(train_losses, label='Training loss')\n",
+        "plt.plot(test_losses, label='Testing loss')\n",
+        "plt.title('Loss at epoch')\n",
+        "plt.legend()"
+      ]
     }
   ],
   "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "T4",
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "name": "python3"
@@ -242,12 +279,7 @@
     "language_info": {
       "name": "python",
       "version": "3.12.10"
-    },
-    "colab": {
-      "provenance": [],
-      "gpuType": "T4"
-    },
-    "accelerator": "GPU"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 5
