Pandas series visualised

--- a/04_pandasbasics.ipynb
+++ b/04_pandasbasics.ipynb
@@ -1,55 +1,84 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "id": "188de831",
-   "metadata": {},
-   "source": [
-    "This will showcase the use of pandas library in python and demonstrate how it works"
-   ]
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "id": "188de831",
+      "metadata": {
+        "id": "188de831"
+      },
+      "source": [
+        "This will showcase the use of pandas library in python and demonstrate how it works"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "id": "77f52c82",
+      "metadata": {
+        "id": "77f52c82"
+      },
+      "outputs": [],
+      "source": [
+        "import pandas as pd"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "5dda2b77",
+      "metadata": {
+        "id": "5dda2b77"
+      },
+      "source": [
+        "First we take a python list then convert it into a pandas series, this is shown below"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "id": "eacc7fc0",
+      "metadata": {
+        "id": "eacc7fc0",
+        "outputId": "fac4d805-a276-45dc-eebc-4541d9de7b4d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0    10\n",
+            "1    20\n",
+            "2    30\n",
+            "3    40\n",
+            "4    50\n",
+            "dtype: int64\n"
+          ]
+        }
+      ],
+      "source": [
+        "my_series = [10, 20, 30, 40, 50]\n",
+        "my_var = pd.Series(my_series)\n",
+        "print(my_var)"
+      ]
+    }
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.12.10"
+    },
+    "colab": {
+      "provenance": [],
+      "gpuType": "T4"
+    },
+    "accelerator": "GPU"
   },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "77f52c82",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5dda2b77",
-   "metadata": {},
-   "source": [
-    "First we take a python list then convert it into a pandas series, this is shown below"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eacc7fc0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "my_series = [10, 20, 30, 40, 50]\n",
-    "my_var = pd.Series(my_series)\n",
-    "print(my_var)"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "name": "python",
-   "version": "3.12.10"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
+  "nbformat": 4,
+  "nbformat_minor": 5
 }
