--- a/04_pandasbasics.ipynb
+++ b/04_pandasbasics.ipynb
@@ -37,16 +37,16 @@
       "execution_count": 2,
       "id": "eacc7fc0",
       "metadata": {
-        "id": "eacc7fc0",
-        "outputId": "fac4d805-a276-45dc-eebc-4541d9de7b4d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "eacc7fc0",
+        "outputId": "fac4d805-a276-45dc-eebc-4541d9de7b4d"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "0    10\n",
             "1    20\n",
@@ -62,9 +62,38 @@
         "my_var = pd.Series(my_series)\n",
         "print(my_var)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "58002e94",
+      "metadata": {},
+      "source": [
+        "dtype is datatype and its called int64 i.e. integer 64 bit.\n",
+        "Operations can be done on this in this way:\n",
+        "1. Access a specific number in this using the index next to it.\n",
+        "2. Label using the indexes i.e change 0,1,2,3,4 to whatever I want, it's important that changing the label doesn't mean replacing the index if 30 is labelled \"c\", I can still use the index 2 to access and play with it"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "0f0cb32d",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "my_index = ['a', 'b', 'c', 'd', 'e']\n",
+        "my_var2 = pd.Series(my_series, index=my_index)\n",
+        "print(my_var2)\n",
+        "print(my_var2['c'])"
+      ]
     }
   ],
   "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "T4",
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "name": "python3"
@@ -72,12 +101,7 @@
     "language_info": {
       "name": "python",
       "version": "3.12.10"
-    },
-    "colab": {
-      "provenance": [],
-      "gpuType": "T4"
-    },
-    "accelerator": "GPU"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 5
