--- a/04_pandasbasics.ipynb
+++ b/04_pandasbasics.ipynb
@@ -41,12 +41,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eacc7fc0",
-        "outputId": "fac4d805-a276-45dc-eebc-4541d9de7b4d"
+        "outputId": "e44bd897-f07e-4788-e4bf-4e51ff352694"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "0    10\n",
             "1    20\n",
@@ -66,7 +66,9 @@
     {
       "cell_type": "markdown",
       "id": "58002e94",
-      "metadata": {},
+      "metadata": {
+        "id": "58002e94"
+      },
       "source": [
         "dtype is datatype and its called int64 i.e. integer 64 bit.\n",
         "Operations can be done on this in this way:\n",
@@ -76,10 +78,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "0f0cb32d",
-      "metadata": {},
-      "outputs": [],
+      "metadata": {
+        "id": "0f0cb32d",
+        "outputId": "a02598ab-b4b1-4de6-c01e-418e6dab77fa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a    10\n",
+            "b    20\n",
+            "c    30\n",
+            "d    40\n",
+            "e    50\n",
+            "dtype: int64\n",
+            "30\n"
+          ]
+        }
+      ],
       "source": [
         "my_index = ['a', 'b', 'c', 'd', 'e']\n",
         "my_var2 = pd.Series(my_series, index=my_index)\n",
