Basic operations executed

--- a/04_pandasbasics.ipynb
+++ b/04_pandasbasics.ipynb
@@ -45,8 +45,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "0    10\n",
             "1    20\n",
@@ -81,16 +81,16 @@
       "execution_count": 3,
       "id": "0f0cb32d",
       "metadata": {
-        "id": "0f0cb32d",
-        "outputId": "a02598ab-b4b1-4de6-c01e-418e6dab77fa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "0f0cb32d",
+        "outputId": "a02598ab-b4b1-4de6-c01e-418e6dab77fa"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "a    10\n",
             "b    20\n",
@@ -107,6 +107,14 @@
         "my_var2 = pd.Series(my_series, index=my_index)\n",
         "print(my_var2)\n",
         "print(my_var2['c'])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "b4fd628f",
+      "metadata": {},
+      "source": [
+        "A dictionary can directly be a parameter in pd.series. All keys become labels, values become the pdarray.\n"
       ]
     }
   ],
