--- a/05_pandasdf.ipynb
+++ b/05_pandasdf.ipynb
@@ -1,59 +1,86 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "id": "236ad088",
-   "metadata": {},
-   "source": [
-    "Now we will look how to create and perform operations on dataframes and understand what it does or looks like."
-   ]
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "id": "236ad088",
+      "metadata": {
+        "id": "236ad088"
+      },
+      "source": [
+        "Now we will look how to create and perform operations on dataframes and understand what it does or looks like."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "id": "dedd1851",
+      "metadata": {
+        "id": "dedd1851"
+      },
+      "outputs": [],
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "from numpy.random import randn\n",
+        "my_data = randn(4,3) # 4 rows, 3 columns\n",
+        "my_rows = ['row1', 'row2', 'row3', 'row4']\n",
+        "my_cols = ['monday', 'tuesday', 'wednesday']"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "7a6a15a0",
+      "metadata": {
+        "id": "7a6a15a0"
+      },
+      "source": [
+        "Now we will actually create the dataframe and parameters go like data,rows,columns"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "id": "94e9095a",
+      "metadata": {
+        "id": "94e9095a",
+        "outputId": "1d383fb6-f684-4fa1-d105-453d4891fd24",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "        monday   tuesday  wednesday\n",
+            "row1 -0.203385  1.622957  -0.619391\n",
+            "row2 -0.297136 -1.418792  -1.337988\n",
+            "row3  0.521635  0.080755  -0.198449\n",
+            "row4 -0.297743  0.775618  -0.118279\n"
+          ]
+        }
+      ],
+      "source": [
+        "my_df = pd.DataFrame(data=my_data, index=my_rows, columns=my_cols)\n",
+        "print(my_df)"
+      ]
+    }
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.12.10"
+    },
+    "colab": {
+      "provenance": []
+    }
   },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dedd1851",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from numpy.random import randn\n",
-    "my_data = randn(4,3) # 4 rows, 3 columns\n",
-    "my_rows = ['row1', 'row2', 'row3', 'row4']\n",
-    "my_cols = ['monday', 'tuesday', 'wednesday']"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7a6a15a0",
-   "metadata": {},
-   "source": [
-    "Now we will actually create the dataframe and parameters go like data,rows,columns "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "94e9095a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "my_df = pd.DataFrame(data=my_data, index=my_rows, columns=my_cols)\n",
-    "print(my_df)"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "name": "python",
-   "version": "3.12.10"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
+  "nbformat": 4,
+  "nbformat_minor": 5
 }
