Importing data and making it a dataframe

--- a/05_pandasdf.ipynb
+++ b/05_pandasdf.ipynb
@@ -42,16 +42,16 @@
       "execution_count": 2,
       "id": "94e9095a",
       "metadata": {
-        "id": "94e9095a",
-        "outputId": "1d383fb6-f684-4fa1-d105-453d4891fd24",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "94e9095a",
+        "outputId": "1d383fb6-f684-4fa1-d105-453d4891fd24"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "        monday   tuesday  wednesday\n",
             "row1 -0.203385  1.622957  -0.619391\n",
@@ -65,9 +65,32 @@
         "my_df = pd.DataFrame(data=my_data, index=my_rows, columns=my_cols)\n",
         "print(my_df)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "99c263b2",
+      "metadata": {},
+      "source": [
+        "Now we will import a given dataset that is already a csv file and convert it directly to a dataframe.\n",
+        "pd.read_csv will do this whole operation for us and save us the data pulling and pushing step. I will use the already existing iris data that I used in the neural network notebook in the same repo."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "31c32686",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "my_df2 = pd.read_csv('iris.csv')\n",
+        "print(my_df2)"
+      ]
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "language": "python",
@@ -76,9 +99,6 @@
     "language_info": {
       "name": "python",
       "version": "3.12.10"
-    },
-    "colab": {
-      "provenance": []
     }
   },
   "nbformat": 4,
