--- a/05_pandasdf.ipynb
+++ b/05_pandasdf.ipynb
@@ -82,7 +82,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "my_df2 = pd.read_csv('iris.csv')\n",
+        "my_df2 = pd.read_csv('Data/iris.csv')\n",
         "print(my_df2)"
       ]
     }
