--- a/05_pandasdf.ipynb
+++ b/05_pandasdf.ipynb
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "94e9095a",
       "metadata": {
         "colab": {
@@ -77,7 +77,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "31c32686",
       "metadata": {},
       "outputs": [
@@ -117,7 +117,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "d3bd7b8b",
       "metadata": {},
       "outputs": [
@@ -153,7 +153,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "6a793495",
       "metadata": {},
       "outputs": [
@@ -250,7 +250,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "4b7ed170",
       "metadata": {},
       "outputs": [
@@ -392,7 +392,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "3d02d4f5",
       "metadata": {},
       "outputs": [
@@ -489,7 +489,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "59876f8e",
       "metadata": {},
       "outputs": [
@@ -568,7 +568,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "9ba4e8d9",
       "metadata": {},
       "outputs": [
@@ -608,7 +608,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "e61b3fd8",
       "metadata": {},
       "outputs": [
@@ -629,7 +629,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "9857f9c4",
       "metadata": {},
       "outputs": [
@@ -655,7 +655,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "fcce5ddd",
       "metadata": {},
       "outputs": [
@@ -693,7 +693,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "d508014a",
       "metadata": {},
       "outputs": [
@@ -734,7 +734,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "d3476b90",
       "metadata": {},
       "outputs": [
@@ -799,7 +799,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "4ac360a6",
       "metadata": {},
       "outputs": [
@@ -830,7 +830,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "id": "5163c8e4",
       "metadata": {},
       "outputs": [
@@ -883,7 +883,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "a7249c42",
       "metadata": {},
       "outputs": [
@@ -936,7 +936,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "id": "a1dd5a80",
       "metadata": {},
       "outputs": [
@@ -989,7 +989,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "54cba708",
       "metadata": {},
       "outputs": [
@@ -1034,7 +1034,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "id": "7de01537",
       "metadata": {},
       "outputs": [
@@ -1070,7 +1070,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "74070234",
       "metadata": {},
       "outputs": [
@@ -1123,7 +1123,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "id": "6031229c",
       "metadata": {},
       "outputs": [
@@ -1151,7 +1151,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "id": "7675fb33",
       "metadata": {},
       "outputs": [
@@ -1204,7 +1204,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "id": "37ae9284",
       "metadata": {},
       "outputs": [
@@ -1257,7 +1257,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "id": "f935da86",
       "metadata": {},
       "outputs": [
@@ -1318,7 +1318,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "id": "6afe66a4",
       "metadata": {},
       "outputs": [
@@ -1354,7 +1354,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "id": "9fb66a73",
       "metadata": {},
       "outputs": [
@@ -1390,7 +1390,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "id": "974fa49d",
       "metadata": {},
       "outputs": [
@@ -1419,7 +1419,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "id": "edcce4f0",
       "metadata": {},
       "outputs": [
@@ -1498,7 +1498,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "id": "ccefda12",
       "metadata": {},
       "outputs": [
@@ -1705,7 +1705,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "id": "cf9696ec",
       "metadata": {},
       "outputs": [
@@ -1904,7 +1904,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "id": "2a956f8a",
       "metadata": {},
       "outputs": [
@@ -1944,7 +1944,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "id": "386b0e98",
       "metadata": {},
       "outputs": [
@@ -2082,7 +2082,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "id": "7c53db41",
       "metadata": {},
       "outputs": [
@@ -2242,7 +2242,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "id": "2e3e0e94",
       "metadata": {},
       "outputs": [
@@ -2271,7 +2271,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "id": "46401057",
       "metadata": {},
       "outputs": [
@@ -2563,7 +2563,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "id": "666ca6e3",
       "metadata": {},
       "outputs": [
@@ -2599,6 +2599,270 @@
       ],
       "source": [
         "my_df2[(my_df2[\"sepal_length\"] == 5.0) | (my_df2[\"sepal_length\"] == 5.1)][\"class\"]"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "7070de04",
+      "metadata": {},
+      "source": [
+        "We can do data cleanup or deal with incomplete data in pandas aswell, hard to do it on iris data so, I will create my own dataset for the sake of learning. Let's call the attributes A,B,C,D and give it some values."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "id": "bf31e61c",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "data = {\n",
+        "    \"A\":[1, 2, 3],\n",
+        "    \"B\":[4,5,6],\n",
+        "    \"C\":[7,np.nan,9],\n",
+        "    \"D\":[10,11,12]\n",
+        "}\n",
+        "my_new_df = pd.DataFrame(data)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "id": "7a66beea",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "   A  B    C   D\n",
+            "0  1  4  7.0  10\n",
+            "1  2  5  NaN  11\n",
+            "2  3  6  9.0  12\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(my_new_df)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "5b660f58",
+      "metadata": {},
+      "source": [
+        "So now this is an incomplete dataset with one null value under the \"C\" column"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "8c9f493e",
+      "metadata": {},
+      "source": [
+        "We can use kill the row with NaN or the column with NaN but only works with inplace=True"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "924dee5a",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "   A  B    C   D\n",
+            "0  1  4  7.0  10\n",
+            "1  2  5  NaN  11\n",
+            "2  3  6  9.0  12\n"
+          ]
+        }
+      ],
+      "source": [
+        "my_new_df.dropna()#no deletion because inplace is false \n",
+        "my_new_df.dropna(axis=1) #this is column \n",
+        "print(my_new_df)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "d2eca2d9",
+      "metadata": {},
+      "source": [
+        "Now apply function can be used and this means we can write any function we want and put on the dataframe"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "id": "d04a2f07",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def times100(x):\n",
+        "    return x*100"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "7c6bb351",
+      "metadata": {},
+      "source": [
+        "This is the function now we can apply on a single column of a dataframe. "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "id": "d0a4029a",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "0    100\n",
+              "1    200\n",
+              "2    300\n",
+              "Name: A, dtype: int64"
+            ]
+          },
+          "execution_count": 6,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "my_new_df['A'].apply(times100)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "7b5811d6",
+      "metadata": {},
+      "source": [
+        "This whole thing can ofcourse be further converted to a fully new dataframe"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
+      "id": "730e041f",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "     A\n",
+            "0  100\n",
+            "1  200\n",
+            "2  300\n"
+          ]
+        }
+      ],
+      "source": [
+        "my_datfram = pd.DataFrame(my_new_df['A'].apply(times100))\n",
+        "print(my_datfram)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "148148a1",
+      "metadata": {},
+      "source": [
+        "The apply function not only works on integers but names and strings as well.\n",
+        "The lambda function can be used as an argument for apply() instead of using def as a seperate function creator."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "a7a6074e",
+      "metadata": {},
+      "source": [
+        "We can use the apply() function on multiple columns as well. We can also append the newly changed data back to original dataframe"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
+      "id": "cefdcf7a",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "     A  B    C   D\n",
+            "0  100  4  7.0  10\n",
+            "1  200  5  NaN  11\n",
+            "2  300  6  9.0  12\n"
+          ]
+        }
+      ],
+      "source": [
+        "my_new_df['A'] = my_new_df['A'].apply(times100)\n",
+        "print(my_new_df)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "253e1105",
+      "metadata": {},
+      "source": [
+        "if we give 2 element list in the argument before the .apply it will get applied on both those columns"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 10,
+      "id": "1a4d4afb",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "       A    B    C   D\n",
+            "0  10000  400  7.0  10\n",
+            "1  20000  500  NaN  11\n",
+            "2  30000  600  9.0  12\n"
+          ]
+        }
+      ],
+      "source": [
+        "my_new_df[['A','B']] = my_new_df[['A','B']].apply(times100)\n",
+        "print(my_new_df)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "cb9fdfbf",
+      "metadata": {},
+      "source": [
+        "Sorting values is a dataframe can be done in ascending or descending order using the sort_values function. The function will not make changes to the dataframe without setting inplace. The same function can also be applied on strings"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 12,
+      "id": "5910f34d",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "       A    B    C   D\n",
+            "2  30000  600  9.0  12\n",
+            "1  20000  500  NaN  11\n",
+            "0  10000  400  7.0  10\n"
+          ]
+        }
+      ],
+      "source": [
+        "my_new_df.sort_values(['A','B'], ascending=False, inplace=True)\n",
+        "print(my_new_df)"
       ]
     }
   ],
